@@ -1,4 +1,5 @@
 NEXT:
+ * Add new source type "licence", providing licence info to build environment
  * Removed lazytag build mode, it was deprecated for a long time
  * Fix error in cvs source if cvsroot unset
 
